add [One Question Everday]

--- a/_posts/面试书籍资料.md
+++ b/_posts/面试书籍资料.md
@@ -1,5 +1,5 @@
 ---
-title: 面试三大方向及书籍资料索引
+title: 面试书籍资料索引
 date: 2021-01-28 14:52:52
 toc: true
 tags:
@@ -8,6 +8,27 @@ tags:
 categories:
 - 招聘
 ---
+
+# 主要技能
+
+## Linux
+
+[Linux工具快速教程](https://www.runoob.com/markdown/md-link.html)
+
+[linux-insides](https://0xax.gitbooks.io/linux-insides/content/)
+
+《Linux内核设计与实现》 [读书笔记](https://www.cnblogs.com/wang_yb/p/3514730.html)
+
+## C++
+[Linux C/C++编程一站式学习](https://www.markjour.com/docs/akabook/zh/index.html)
+
+《C++ primer》 [笔记和练习题](https://github.com/applenob/Cpp_Primer_Practice)
+
+## 安全技术
+
+## 数据挖掘
+
+<!-- more -->
 
 # 三大方向招聘要求
 
@@ -120,19 +141,3 @@ NoSQL, Key-value存储原理。
 3、熟悉C++/Java/Python等，具备优秀的编码能力，至少熟悉一种常见的机器学习/深度学习平台；
 4、有钻研精神，突出的数据分析能力，主观能动性强，能适应快速变化的业务需求，具备良好的团队合作精神和沟通技巧。
 
-# 主要技能
-
-## Linux
-
-[Linux工具快速教程](https://www.runoob.com/markdown/md-link.html)
-
-[linux-insides](https://0xax.gitbooks.io/linux-insides/content/)
-
-《Linux内核设计与实现》 [读书笔记](https://www.cnblogs.com/wang_yb/p/3514730.html)
-
-## C++
-[Linux C/C++编程一站式学习](https://www.markjour.com/docs/akabook/zh/index.html)
-
-## 安全技术
-
-## 数据挖掘
