--- a/_posts/每日一题_算法/栈和队列的区别.md
+++ b/_posts/每日一题_算法/栈和队列的区别.md
@@ -9,4 +9,9 @@ categories:
 - 每日一题_算法
 ---
 
+栈和队列都是一种逻辑的结构，具体实现用链表和数组都可以。
+
+栈的特点是先进后出，栈的数据访问很严格，只能访问最后加入的数据，这对数据访问控制严格的应用很有好处。应用中，如字符串倒序输出，运算符的匹配，使用栈的原理就可以很好的实现。程序函数的调用就是使用的栈，完成函数后返回到栈顶指针执行。
+
+队列的特点是先进先出，数据从队列尾插入，从队列头读取，可以模拟很多现实的生产环境，例如排队，不允许有任何元素插队，常用于生产消费模型，队列有产品，通知消费者来消费，无产品通知生产者生产。
 
