--- a/_posts/面试提纲.md
+++ b/_posts/面试提纲.md
@@ -139,13 +139,13 @@ class Product {
 
 class ConcreteProduct1 : public Product {
  public:
-  std::string Operation() const override {
+  string Operation() const override {
     return "{Result of the ConcreteProduct1}";
   }
 };
 class ConcreteProduct2 : public Product {
  public:
-  std::string Operation() const override {
+  string Operation() const override {
     return "{Result of the ConcreteProduct2}";
   }
 };
@@ -183,6 +183,13 @@ class ConcreteCreator2 : public Creator {
 序列式容器：vector、list、deque、stack、queue、heap、priority_queue
 关联式容器，内部结构基本上是一颗平衡二叉树：set、map、multiset、multimap
 set：其内部元素会根据元素的键值自动被排序。区别于map，它的键值就是实值，而map可以同时拥有不同的键值和实值。
+
+### RB-tree特点
+每个节点或者是黑色，或者是红色。
+根节点是黑色。
+每个叶子节点（NIL）是黑色。 [注意：这里叶子节点，是指为空(NIL或NULL)的叶子节点！]
+如果一个节点是红色的，则它的子节点必须是黑色的。
+从一个节点到该节点的子孙节点的所有路径上包含相同数目的黑节点。
 
 ### vector中erase()和remove()的区别？
 erase函数可以用于删除vector容器中的一个或者一段元素。在进行单个元素删除后，传入的迭代器指向不变，仍然指向被删除元素的位置。
@@ -223,9 +230,55 @@ new的前四个字节存储了数组的长度,对数组对象逐一析构
 ### TCP UDP
 1. TCP面向连接， UDP无连接的
 2. TCP有保障的，UDP传输无保障的
-3. TCP是效率低的首部20，UDP效率高首部
+3. TCP是效率低的首部20，UDP效率高首部8
 4. TCP是基于流的，UDP基于数据报文
 5. TCP传输重要数据，UDP传输不重要的数据
+
+### Socket编程
+
+TCP s:socket(family,,protocol) bind(fd,ipport) listen() accept()阻塞 write() read() send() recv() c:socket() connect()阻塞 rw() close()
+UDP s:socket() bind() sendto() recvfrom() c:socket() sendto() recvfrom()  close() connect()
+
+### IO多路复用
+
+### TCP重传
+超时重传（RTO）
+当一个包被发送后，就开启一个定时器，如果定时时间到了，还未收到能确认该发送包的应答包，就重传一份数据。注意收到的应答包可能是该包也可能是后面包的，但是只要能确认该包被收到就行。另外如果，是因为网络延时造成重传，则接受端收到重复数据包后丢弃该包。
+快速重传
+当如果发送端收到一个包的三次应答包后，立即重传，比超时重传更高效。
+
+### TCP拥塞控制
+滑动窗口
+慢启动算法（工作过程如下图所示）：设置初始拥塞窗口大小为1，以后每收到一个应答拥塞窗口大小就加1，窗口大小呈指数级增长。客户端可发送数据的取拥塞窗口和应答包窗口两者中较小的那个。
+此时设置一个“慢启动阈值”，它的值是当前拥塞窗口大小的一半。
+超时后重新慢启动，到阈值线性增加，再超时再设置阈值，快速恢复，窗口是之前超时的一半
+
+### 坚持定时器
+TCP不对ACK应答报文进行确认，如果接受端缓冲被占满，发送一个窗口为0的应答，过了一段时间数据处理完毕，重新发送一个应答，告诉发送端窗口大小。不幸的是，如果这个包丢了，就会进入死锁状态——发送端等待更新窗口的应答包，接收端等待接收数据。
+为了避免死锁了发生，TCP使用了一个坚持定时器来周期性地向接收方查询，以便发现窗口是否已经增大。这一过程也被称为窗口探查。
+
+### http
+http数据由请求行，首部字段，空行，报文主体四个部分组成
+首部字段分为：通用首部字段，请求首部字段，响应首部字段，实体首部字段
+200 - 请求成功
+301 - 资源（网页等）被永久转移到其它URL.
+404 - 请求的资源（网页等）不存在
+500 - 内部服务器错误
+1xx：指示信息--表示请求已接收，继续处理
+2xx：成功--表示请求已被成功接收、理解、接受
+3xx：重定向--要完成请求必须进行更进一步的操作
+4xx：客户端错误--请求有语法错误或请求无法实现
+5xx：服务器端错误--服务器未能实现合法的请求
+
+HTTP 1.0规定浏览器与服务器只保持短暂的连接，浏览器的每次请求都需要与服务器建立一个TCP连接，服务器完成请求处理后立即断开TCP连接，服务器不跟踪每个客户也不记录过去的请求。连接无法复用
+HTTP 1.1支持持久连接，在一个TCP连接上可以传送多个HTTP请求和响应，减少了建立和关闭连接的消耗和延迟。
+
+### https
+1、https协议需要到ca申请证书，一般免费证书较少，因而需要一定费用。
+2、http是超文本传输协议，信息是明文传输，https则是具有安全性的ssl加密传输协议。
+3、http和https使用的是完全不同的连接方式，用的端口也不一样，前者是80，后者是443。
+4、http的连接很简单，是无状态的；HTTPS协议是由SSL+HTTP协议构建的可进行加密传输、身份认证的网络协议，比http协议安全
+
 
 ### 程序内存
 1.栈 - 由编译器自动分配释放
@@ -236,3 +289,4 @@ new的前四个字节存储了数组的长度,对数组对象逐一析构
 5 程序代码区，存放2进制代码。
 在函数体中定义的变量通常是在栈上，用malloc， calloc， realloc等分配内存的函数分配得到的就是在堆上。在所有函数体外定义的是全局量，加了static修饰符后不管在哪里都存放在全局区(静态区)，在所有函数体外定义的static变量表示在该文件中有效，不能extern到别的文件用，在函数体内定义的static表示只在该函数体内有效。另外，函数中的"adgfdf"这样的字符串存放在常量区。
 
+### 数据库引擎
