--- a/_posts/项目总结.md
+++ b/_posts/项目总结.md
@@ -68,15 +68,14 @@ tensorflow 应用到andoird 声音识别方法
 libandroid_tensorflow_inference_java.jar 
 // Load the model from disk.
 new TensorFlowInferenceInterface(assetManager, modelFilename);
-inferenceInterface.fetch(outputName,labels);
+inferenceInterface.feed
+inferenceInterface.run
 
 ## 手势密码
 跟踪算法 CSRT TLD
-### TLD
 追踪器的作用是跟踪连续帧间的运动，当物体始终可见时跟踪器才会有效。追踪器根据物体在前一帧已知的位置估计在当前帧的位置，这样就会产生一条物体运动的轨迹，从这条轨迹可以为学习模块产生正样本（Tracking->Learning）。
 使用作者自己提出的Median-Flow追踪算法。
 
 检测器的作用是估计追踪器的误差，如果误差很大就改正追踪器的结果。检测器对每一帧图像都做全面的扫描，找到与目标物体相似的所有外观的位置，从检测产生的结果中产生正样本和负样本，交给学习模块（Detection->Learning）。算法从所有正样本中选出一个最可信的位置作为这一帧TLD的输出结果，然后用这个结果更新追踪器的起始位置（Detection->Tracking）。
-
 识别算法YOLO
 轨迹简化
