--- a/_posts/项目总结.md
+++ b/_posts/项目总结.md
@@ -15,6 +15,12 @@ categories:
 ## 萌加速网游加速器
 主要功能
 ### 驱动开发
+NDIS，Network Driver Interface Specification，网络协议接口标准。从图中我们可以看到包裹在其中的两个驱动程序，一个是NDIS intermediate driver，NDIS中间层驱动程序，另一个是NDIS minport driver，小端口驱动程序。下面简单介绍一下这
+两个驱动程序：
+a) Ndis intermediate driver，NDIS中间层驱动程序，对于上层的protocol driver它充当 minport driver的作用，对于下层的minport driver它充当一个protocol driver的作用，所以在驱动程序 DriverEntry中就注册NDIS_PROTOCOL_CHARACTERISTICS和 NDIS_MINIPORT_CHARACTERISTICS，使用protocol characteristics中NDIS API从 miniport driver那里取得数据包，再用miniport characteristics的NDIS API向上层的 protocol driver发送数据包。Nids intermediate driver最大的优势就是所有miniport driver的数据包都要通过它这里倒手给protocol driver，所以网络防火墙就看上了这块风水宝地。现在很多网络防火墙都使用 NDIS intermediate driver做数据包的过滤和拦截工作，过滤的规则设置到 MPSendPackets，PTReceive，PTReceiveRacket这三个函数。
+NDIS 6.0之后，filter driver就取代了Ndis intermediate driver，WDK中提供源码。
+b)   Ndis miniport driver一般是由设备厂商提供的，在DDK中也提供了miniport driver的一个例子 e100bex，支持Intel EtherExpressTM PRO/100+ Ethernet PCI adapter 和 Intel EtherExpressTM PRO/100B PCI adapter两款网络适配器。
+
 ddl import
 ### C#线程安全 
 list
@@ -47,6 +53,17 @@ ajax
 ## 无人机
 socket编程
 java.net.Socket;
+// 创建Socket对象 & 指定服务端的IP 及 端口号
+socket = new Socket("192.168.1.172", 8989);
+// 步骤1：从Socket 获得输出流对象OutputStream
+// 该对象作用：发送数据
+outputStream = socket.getOutputStream();
+// 步骤2：写入需要发送的数据到输出流对象中
+outputStream.write((mEdit.getText().toString()+"\n").getBytes("utf-8"));
+// 特别注意：数据的结尾加上换行符才可让服务器端的readline()停止阻塞
+// 步骤3：发送数据到服务端
+outputStream.flush();
+
 IO复用
 andoird手机端JAVA，麦克风获取，socket，地理位置，手机姿态
 AudioRecord
