--- a/_posts/面试提纲.md
+++ b/_posts/面试提纲.md
@@ -283,7 +283,7 @@ select的轮询机制是系统会去查找每个fd是否数据已准备好，当
 select还是epoll都需要内核把FD消息通知给用户空间，epoll是通过内核于用户空间mmap同一块内存实现的，而select则做了不必要的拷贝
 select底层是数组，poll是链表，epoll是红黑树
 
-epoll的工作模式
+###  epoll的工作模式
 LT(level triggered) 是缺省的工作方式，并且同时支持block和no-block socket。在这种做法中，内核告诉你一个文件描述符是否就绪了，然后你可以对这个就绪的fd进行IO操作。如果你不作任何操作，内核还是会继续通知你的，所以，这种模式编程出错误可能性要小一点。传统的select/poll都是这种模型的代表。
 ET (edge-triggered) 是高速工作方式，只支持no-block socket。 在这种模式下，当描述符从未就绪变为就绪时，内核就通过epoll告诉你，然后它会假设你知道文件描述符已经就绪，并且不会再为那个文件描述符发送更多的就绪通知，直到你做了某些操作而导致那个文件描述符不再是就绪状态。不过在TCP协议中，ET模式的加速效用仍需要更多的benchmark确认。
 
@@ -367,6 +367,16 @@ JOIN INNER JOIN/LEFT OUTER JOIN
 b+树的中间节点不保存数据，所以磁盘页能容纳更多节点元素，更“矮胖”；
 b+树查询必须查找到叶子节点，b树只要匹配到即可不用管元素位置，因此b+树查找更稳定（并不慢）；
 对于范围查找来说，b+树只需遍历叶子节点链表即可，b树却需要重复地中序遍历
+
+### 数据库事务
+在执行SQL语句的时候，某些业务要求，一系列操作必须全部执行，而不能仅执行一部分。例如，一个转账操作。
+把多条语句作为一个整体进行操作的功能，被称为数据库事务。
+
+### ACID
+A  事务的原子性(Atomicity)：指一个事务要么全部执行,要么不执行.也就是说一个事务不可能只执行了一半就停止了.比如你从取款机取钱,这个事务可以分成两个步骤:1划卡,2出钱.不可能划了卡,而钱却没出来.这两步必须同时完成.要么就不完成.
+C 事务的一致性(Consistency)：指事务的运行并不改变数据库中数据的一致性.例如,完整性约束了a+b=10,一个事务改变了a,那么b也应该随之改变.
+I 独立性(Isolation）:事务的独立性也有称作隔离性,是指两个以上的事务不会出现交错执行的状态.因为这样可能会导致数据不一致.
+D 持久性(Durability）:事务的持久性是指事务执行成功以后,该事务所对数据库所作的更改便是持久的保存在数据库之中，不会无缘无故的回滚.
 
 ### 事务的四个隔离等级和解决的问题。
 读未提交（脏读）读已提交（不可重复读）可重复读（幻读）串行化
@@ -508,3 +518,86 @@ Linux平台下（加锁）
 ### 伙伴算法
 就是将内存分成若干块，然后尽可能以最适合的方式满足程序内存需求的一种内存管理算法，伙伴算法的一大优势是它能够完全避免外部碎片的产生。
 把所有的空闲页框分组为 11 块链表，每一块链表分别包含大小为1，2，4，8，16，32，64，128，256，512 和 1024 个连续的页框。对1024 个页框的最大请求对应着 4MB 大小的连续RAM 块。每一块的第一个页框的物理地址是该块大小的整数倍。例如，大小为 16个页框的块，其起始地址是 16 * 2^12 （2^12 = 4096，这是一个常规页的大小）的倍数。
+
+
+
+
+
+
+
+
+## 萌加速网游加速器
+主要功能
+### 驱动开发
+NDIS，Network Driver Interface Specification，网络协议接口标准。从图中我们可以看到包裹在其中的两个驱动程序，一个是NDIS intermediate driver，NDIS中间层驱动程序，另一个是NDIS minport driver，小端口驱动程序。下面简单介绍一下这
+两个驱动程序：
+a)   Ndis intermediate driver，NDIS中间层驱动程序，对于上层的protocol driver它充当 minport driver的作用，对于下层的minport driver它充当一个protocol driver
+的作用，所以在驱动程序 DriverEntry中就注册NDIS_PROTOCOL_CHARACTERISTICS和 NDIS_MINIPORT_CHARACTERISTICS，使用protocol characteristics中NDIS API从 miniport driver那里取得数据包，再用miniport characteristics的NDIS API向上层的 protocol driver发送数据包。Nids intermediate driver最大的优势就是所有miniport driver的数据包都要通过它这里倒手给protocol driver，所以网络防火墙就看上了这块风水宝地。现在很多网络防火墙都使用 NDIS intermediate driver做数据包的过滤和拦截工作，过滤的规则设置到 MPSendPackets，PTReceive，PTReceiveRacket这三个函数。
+
+NDIS 6.0之后，filter driver就取代了Ndis intermediate driver，WDK中提供源码。
+
+b)   Ndis miniport driver一般是由设备厂商提供的，在DDK中也提供了miniport driver的一个例子 e100bex，支持Intel EtherExpressTM PRO/100+ Ethernet PCI adapter 和 Intel EtherExpressTM PRO/100B PCI adapter两款网络适配器。
+ddl import
+### C#线程安全 
+list
+ConcurrentDictionary
+new thread(函数) ()=>{} lambad 表达式
+在主进程中join等待每个线程完成
+
+### 机器字转换
+大小端 BitConverter.IsLittleEndian
+
+### NAT类型
+
+进程间通信
+socket
+
+Openvpn原理
+OpenVPN 基于 OpenSSL 来实现安全，但是却不是传统意义上的 SSLVPN，它只是一个普通的 VPN，工作在 IP 层而不是传输层。
+IPSec 的隧道模式，它将一个 IP 数据报封装于另一个 IP 数据报中，
+在OpenVpn中，如果用户访问一个远程的虚拟地址（属于虚拟网卡配用的地址系列，区别于真实地址），则操作系统会通过路由机制将数据包（TUN模式）或数据帧（TAP模式）发送到虚拟网卡上，服务程序接收该数据并进行相应的处理后，通过SOCKET从外网上发送出去，远程服务程序通过SOCKET从外网上接收数据，并进行相应的处理后，发送给虚拟网卡，则应用软件可以接收到，完成了一个单向传输的过程，反之亦然。
+
+## 尚名校家教服务系统
+业务流程
+前端开发
+Vue是一个典型的MVVM框架，模型（Model）只是普通的JavaScript对象，修改它则视图（View）会自动更新。这种设计让状态管理变得非常简单而直观。
+Observer：能够对数据对象的所有属性进行监听，如有变动可拿到最新值并通知订阅者
+Compile：对每个元素节点的指令进行扫描和解析，根据指令模板替换数据，以及绑定相应的更新函数
+Watcher：作为连接Observer和Compile的桥梁，能够订阅并收到每个属性变动的通知，执行指令绑定的相应回调函数，从而更新视图
+ajax
+
+## 无人机
+socket编程
+java.net.Socket;
+IO复用
+andoird手机端JAVA，麦克风获取，socket，地理位置，手机姿态
+AudioRecord
+    更接近底层
+    能够更加自由灵活地控制，可以得到原始的一帧帧PCM音频数据。
+
+audioRecord = new AudioRecord(AUDIO_SOURCE,// 指定音频来源，这里为麦克风
+                FREQUENCY, // 16000HZ采样频率
+                CHANNELCONGIFIGURATION,// 录制通道
+                AUDIO_SOURCE_BUTTOM,// 录制编码格式
+                recBufSize);// 录制缓冲区大小 //先修改
+
+MediaRecorder.AudioSource.MIC
+CAMCORDER
+
+LocationManager.getLastKnowLocation()方法获取当前位置 
+
+tensorflow 应用到andoird 声音识别方法
+libandroid_tensorflow_inference_java.jar 
+// Load the model from disk.
+new TensorFlowInferenceInterface(assetManager, modelFilename);
+inferenceInterface.feed
+inferenceInterface.run
+
+## 手势密码
+跟踪算法 CSRT TLD
+追踪器的作用是跟踪连续帧间的运动，当物体始终可见时跟踪器才会有效。追踪器根据物体在前一帧已知的位置估计在当前帧的位置，这样就会产生一条物体运动的轨迹，从这条轨迹可以为学习模块产生正样本（Tracking->Learning）。
+使用作者自己提出的Median-Flow追踪算法。
+
+检测器的作用是估计追踪器的误差，如果误差很大就改正追踪器的结果。检测器对每一帧图像都做全面的扫描，找到与目标物体相似的所有外观的位置，从检测产生的结果中产生正样本和负样本，交给学习模块（Detection->Learning）。算法从所有正样本中选出一个最可信的位置作为这一帧TLD的输出结果，然后用这个结果更新追踪器的起始位置（Detection->Tracking）。
+识别算法YOLO
+轨迹简化
