--- a/_posts/算法/栈和队列的区别.md
+++ b/_posts/算法/栈和队列的区别.md
@@ -1,12 +1,12 @@
 ---
-title: 【每日一题_算法】栈和队列的区别
+title: 【算法】栈和队列的区别
 date: 2021-03-6 14:52:52
 toc: true
 tags:
 - 面试 
 - 数据结构
 categories:
-- 每日一题_算法
+- 算法
 ---
 
 栈和队列都是一种逻辑的结构，具体实现用链表和数组都可以。
