--- a/_posts/C++/指针和引用的区别.md
+++ b/_posts/C++/指针和引用的区别.md
@@ -7,20 +7,18 @@ tags:
 categories:
 - C++
 ---
-指针和引用在C++中很常用，但是对于它们之间的区别很多初学者都不是太熟悉，下面来谈谈他们2者之间的区别和用法。
+参考：https://www.cnblogs.com/dolphin0520/archive/2011/04/03/2004869.html
 
-1.指针和引用的定义和性质区别：
+指针和引用的定义和性质区别：
+
+<!-- more -->
 
 (1)指针：指针是一个变量，只不过这个变量存储的是一个地址，指向内存的一个存储单元；而引用跟原来的变量实质上是同一个东西，只不过是原变量的一个别名而已。如：
-
-int a=1;int *p=&a;
-
-int a=1;int &b=a;
-
-上面定义了一个整形变量和一个指针变量p，该指针变量指向a的存储单元，即p的值是a存储单元的地址。
-
-而下面2句定义了一个整形变量a和这个整形a的引用b，事实上a和b是同一个东西，在内存占有同一个存储单元。
-
+```c++
+int a=1;
+int *p=&a;//p的值是a存储单元的地址。
+int &b=a; //事实上a和b是同一个东西，在内存为同一个存储单元。
+```
 (2)可以有const指针，但是没有const引用；
 
 (3)指针可以有多级，但是引用只能是一级（int **p；合法 而 int &&a是不合法的）
@@ -31,6 +29,5 @@ int a=1;int &b=a;
 
 (6)"sizeof引用"得到的是所指向的变量(对象)的大小，而"sizeof指针"得到的是指针本身的大小；
 
-(7)指针和引用的自增(++)运算意义不一样；
+(7)指针和引用的自增(++)运算意义不一样，引用使变量自增，指针表示地址增加（用于数组）。
 
-https://www.cnblogs.com/dolphin0520/archive/2011/04/03/2004869.html
