--- a/_posts/OS/虚拟内存.md
+++ b/_posts/OS/虚拟内存.md
@@ -1,12 +1,11 @@
 ---
-title: 【每日一题_OS】虚拟内存
+title: 【OS】虚拟内存
 date: 2021-03-19 19:48:33
 toc: true
 tags:
-- 面试 
 - 操作系统
 categories:
-- 每日一题_OS
+- OS
 ---
 
 虚拟内存是计算机系统内存管理的一种技术。它使得应用程序认为它拥有连续的可用的内存（一个连续完整的地址空间），而实际上，它通常是被分隔成多个物理内存碎片，还有部分暂时存储在外部磁盘存储器上，在需要时进行数据交换。目前，大多数操作系统都使用了虚拟内存，如Windows家族的“虚拟内存”；Linux的“交换空间”等。
