--- a/_posts/OS/进程和线程.md
+++ b/_posts/OS/进程和线程.md
@@ -1,12 +1,11 @@
 ---
-title: 【每日一题_OS】进程和线程
+title: 【OS】进程和线程
 date: 2021-03-06 10:12:48
 toc: true
 tags:
-- 面试 
 - 操作系统
 categories:
-- 每日一题_OS
+- OS
 ---
 进程与线程区别？多进程和多线程健壮性？linux中的线程？
 
@@ -34,7 +33,7 @@ categories:
 对同一进程中的线程，在一个线程中分配的堆在各个线程中均可以使用，在一个线程中打开的文件各个线程均可用。
 
 ## 4.执行
-线程的执行与进程是有区别的。每个独立的进程有有自己的一个程序入口，顺序执行序列和程序的出口，但是线程不能独立执行，必须依附与程序之中，由应用程序提供多个线程的并发控制。
+线程的执行与进程是有区别的。每个独立的进程有有自己的一个程序入口，顺序执行序列和程序的出口，但是线程不能独立执行，必须依附于程序之中，由应用程序提供多个线程的并发控制。
 
 ## 5.多进程和多线程
 多进程比多线程程序要健壮。一个线程死掉整个进程就死掉了，但是在保护模式下，一个进程死掉对另一个进程没有直接影响。
