--- a/_posts/项目总结.md
+++ b/_posts/项目总结.md
@@ -42,6 +42,46 @@ OpenVPN 基于 OpenSSL 来实现安全，但是却不是传统意义上的 SSLVP
 IPSec 的隧道模式，它将一个 IP 数据报封装于另一个 IP 数据报中，
 在OpenVpn中，如果用户访问一个远程的虚拟地址（属于虚拟网卡配用的地址系列，区别于真实地址），则操作系统会通过路由机制将数据包（TUN模式）或数据帧（TAP模式）发送到虚拟网卡上，服务程序接收该数据并进行相应的处理后，通过SOCKET从外网上发送出去，远程服务程序通过SOCKET从外网上接收数据，并进行相应的处理后，发送给虚拟网卡，则应用软件可以接收到，完成了一个单向传输的过程，反之亦然。
 
+### 服务器架构
+PC--openvpn--入口服务器--国内专线--国外
+
+### linux route
+ip rule 命令
+linux 高级路由即基于策略的路由，比传统路由在功能上更强大，使用也更灵活，它不仅能够像传统路由一样，根据目的地址来转发数据，而且也能够根据报文大小、应用，协议或ip源地址来选择路由转发路径从而让系统管理员能轻松做到：
+1、 管制某台计算机的带宽。
+2、 管制通向某台计算机的带宽
+3、 帮助你公平地共享带宽
+4、 保护你的网络不受DOS的攻击
+5、 保护你的Internet不受到你的客户的攻击
+6、 把多台服务器虚拟成一台，并进行负载均衡或者提高可用性
+7、 限制你的用户访问某些计算机
+8、 限制对你的计算机的访问
+9、 基于用户帐号、MAC地址、源IP地址、端口、QOS《TOS》、时间或者content等进行路由
+
+ip rule add from 10.18.0.4/30 table MJS
+ip route add default via 10.18.0.5 table MJS
+
+### gost 专线到国外连接 
+加密防止流量被检测
+TCP和UDP分离，TCP可以不走专线，需要加密，游戏一般用UDP互联；
+
+### 加速效果
+1. 查看出口服务器到游戏服务器的IP延迟，使用mtr或ping，tracert，nslookup 
+2. 是否中间节点的问题，丢包，尝试切换到其他出口，同样的问题出现可能是机房或线路问题
+3. 可以用UDP发比较小的特征码到服务器或者TCP，netcat
+4. 延迟可以使用多线程发包，计算时间
+
+### 防止滥用
+ip r add blackhole 192.168.0.0/16 table MJS
+
+### python网络
+socket.socket([family[, type[, proto]]])
+s.bind()	绑定地址（host,port）到套接字， 在 AF_INET下，以元组（host,port）的形式表示地址。
+s.listen()	开始 TCP 监听。backlog 指定在拒绝连接之前，操作系统可以挂起的最大连接数量。该值至少为 1，大部分应用程序设为 5 就可以了。
+s.accept()	被动接受TCP客户端连接,(阻塞式)等待连接的到来
+s.connect()	主动初始化TCP服务器连接，。一般address的格式为元组（hostname,port），如果连接出错，返回socket.error错误。
+
+
 ## 尚名校家教服务系统
 业务流程
 前端开发
