--- a/_posts/项目总结.md
+++ b/_posts/项目总结.md
@@ -8,10 +8,31 @@ tags:
 categories:
 - 招聘
 ---
-
 总结做过的项目，涉及的知识点。
 
 <!-- more -->
+
+## 魔镜
+### 加载耗时检测算法
+原有算法：人工配置hsv色彩空间，选取兴趣范围，ocr关键字，边缘检测，矩形检测，从起始到结束搜索起始，配置阈值。
+改进算法：利用相邻帧间的变化，变化大的帧看作加载变化帧。
+1. 高斯平滑，降噪
+2. 空间色彩直方图，相关性，卡方，十字交叉（取最小），巴氏距离，EMD
+3. 各个色彩通道直接求差值，侵蚀膨胀降噪，降采样取最大值，直接求差值的和
+4. 边缘检测，侵蚀膨胀求差值，再膨胀侵蚀
+5. 角点检测，降采样，求差值
+6. 将各种差值数组，大津自适应二值化，可多次迭代
+
+### 视频分类
+对每一帧使用InceptionV3（imagenet 预训练）提取特征，保存最后avg-pool层权重作lstm输入，三卷积+最大池化堆叠，几个多通道并行网络
+lSTM
+一定序列长度的帧作为输入
+
+### 滑动验证
+mobileNet
+数据收集，图像增广
+
+
 
 ## 萌加速网游加速器
 主要功能
